<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".JuegoActivity">

    <TextView
        android:id="@+id/tvEstadoPartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvJugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="20sp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPorcentajeVidaJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_completo"
            />

        <ProgressBar
            android:id="@+id/pbJugador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_marginTop="5sp"
            android:progressTint="@color/colorPrimary"
            android:progress="100"
            android:layout_marginHorizontal="10sp"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:text="@string/mounstro"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPorcentajeVidaMounstro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje_completo"
            />

        <ProgressBar
            android:id="@+id/pbMounstro"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:progress="100"
            android:progressTint="@color/colorPrimaryDark"
            android:layout_marginHorizontal="10sp"/>

    </LinearLayout>

    <RelativeLayout
        android:padding="10sp"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAtacar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atacar"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            android:onClick="atacarAMounstro"
            />

        <Button
            android:id="@+id/btnCurar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curar"
            android:textSize="15sp"
            android:layout_centerInParent="true"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            android:onClick="curarse"
            />

        <Button
            android:id="@+id/btnRendirse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rendirser"
            android:textSize="15sp"
            android:layout_alignParentStart="true"
            android:onClick="rendirse"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btnPantallaPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ir_a_pantalla_principal"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:onClick="clickBtnPantallaPrincipal"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListaDeMovimientos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>